kubernetes/apps/authentik/app/int-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-internal
  namespace: default
spec:
  ingressClassName: internal-nginx
  rules:
    - host: &host "auth.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "auth-${SECRET_DOMAIN/./-}-tls"
