kubernetes/apps/authentik/app/redirect-and-webfinger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: authentik
    nginx.ingress.kubernetes.io/permanent-redirect: https://auth.kawalink.com/.well-known/webfinger
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
  name: authentik-webfinger
spec:
  ingressClassName: external
  rules:
    - host: kawalink.com
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /.well-known/webfinger
            pathType: Exact
  tls:
    - hosts:
        - kawalink.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: authentik
    nginx.ingress.kubernetes.io/permanent-redirect: https://auth.kawalink.com
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: authentik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: authentik
    app.kubernetes.io/part-of: authentik
  name: authentik-root-domain-redirect
spec:
  ingressClassName: external
  rules:
    - host: kawalink.com
      http:
        paths:
          - backend:
              service:
                name: authentik-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kawalink.com
